[package]
name = "rachel_project"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.5.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "cookies", "rustls-tls"] }
futures = "0.3"
